chore: Configure java modules for main and test sources
Close #16